--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -15,5 +15,12 @@ jobs:
           pip install -r requirements.txt
           python train.py
           
-          echo "Model METRICS"
-          cat metrics.txt
+          echo "## Model METRICS" >> report.md
+          cat metrics.txt >> report.md
+          
+          echo "Data Viz" >> report.md
+          cml publish plot.png --md >> report.md
+          cml publish feature_importance.png --md >> report.md
+          cml publish residuals.png --md >> report.md
+          
+          cml send-comment report.md
